--- a/quemSomos.html
+++ b/quemSomos.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="col-md-3">
                     <a href="#" class="btn custom-btn-blue"><h2>Visão</h2></a>
-                    <img src="imagens/nossa_historia.jpg" class="circle-img" alt="Nossa Visão">
+                    <img src="imagens/visao.jpg" class="circle-img" alt="Nossa Visão">
                     <p class="text-center-ul">
                         Nossa visão é ser reconhecida como a principal referência em serviços de gráfica impressão,
                         marketing digital e criação de websites, tanto em Angola como internacionalmente. Queremos ser a
@@ -100,7 +100,7 @@
                 
                 <div class="col-md-3">
                     <a href="#" class="btn custom-btn-blue"><h2>Valores</h2></a>
-                    <img src="imagens/nossa_historia.jpg" class="circle-img" alt="Nossos Valores">
+                    <img src="imagens/valores.jpg" class="circle-img" alt="Nossos Valores">
                     <ul class="text-center-ul">
                         <li><strong>Inovação:</strong> Buscamos constantemente novas maneiras de superar desafios e criar
                             soluções criativas para nossos clientes.</li>
